# lerobot_robot_dual_xarm7

./: .gitignore  README.md  pyproject.toml
lerobot_robot_dual_xarm7/: config_dual_xarm7.py  dual_xarm7.py
