[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot_robot_dual_xarm7"
version = "0.0.1"
description = "LeRobot Dual xArm7 integration"
readme = "README.md"
authors = [
  { name = "Jonas Stehr"},
]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
dependencies = [
  "xarm-python-sdk",
  "pyrealsense2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lerobot_robot_dual_xarm7*"]
exclude = ["*.egg-info"]